dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.50])

AC_INIT([atmosphere-calculator], [1.0], [rs@ralph-schleicher.de])
AM_INIT_AUTOMAKE([foreign no-define])

AC_CONFIG_SRCDIR([atmosphere-calculator.lisp])
AC_CONFIG_FILES([Makefile])

AC_CHECK_PROGS([BUILDAPP], [buildapp], [true])

AC_SUBST([PACKAGE_NAME])
AC_SUBST([PACKAGE_VERSION])
AC_SUBST([PACKAGE_STRING])
AC_SUBST([PACKAGE_BUGREPORT])
AC_SUBST([PACKAGE_TARNAME])

AC_OUTPUT
